update ghost app with env_var for URL

--- a/apps/ghost/app.json
+++ b/apps/ghost/app.json
@@ -6,5 +6,8 @@
   "data_dirs": [
     "/var/lib/ghost/content"
   ],
+  "env_vars": {
+    "url": "https://ghost.{{ portal.domain }}/"
+  },
   "prefix_protected": "/ghost/"
 }
