--- a/apps/moodle/app.json
+++ b/apps/moodle/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Moodle",
+  "name": "moodle",
   "description": "The Moodle App helps users make the best of their Moodle sites.",
   "image": "moodlehq/moodleapp",
   "port": 80
