update app-template-python to format v 1.0

--- a/apps/app-template-python/app.json
+++ b/apps/app-template-python/app.json
@@ -1,4 +1,5 @@
 {
+  "v": "1.0",
   "name": "app-template-python",
   "description": "A fully functional and minimal Portal app that can be used to quickly bootstrap a new app using Python",
   "image": "registry.gitlab.com/ptl-public/app-template-python:master",
@@ -6,8 +7,22 @@
   "data_dirs": [
     "/user_data"
   ],
-  "authentication": {
-    "default_access": "private",
-    "public_paths": ["/public/"]
+  "paths": {
+    "": {
+      "access": "private",
+      "headers": {
+        "X-Ptl-Client-Id": "{{ client_id }}",
+        "X-Ptl-Client-Name": "{{ client_name }}",
+        "X-Ptl-Client-Type": "terminal",
+        "X-Ptl-Foo": "bar"
+      }
+    },
+    "/public/": {
+      "access": "public",
+      "headers": {
+        "X-Ptl-Client-Type": "public",
+        "X-Ptl-Foo": "bar"
+      }
+    }
   }
 }
