--- a/apps/bitwarden/app.json
+++ b/apps/bitwarden/app.json
@@ -1,6 +1,6 @@
 {
+  "v": "2.0",
   "name": "bitwarden",
-  "description": "Bitwarden is a free and open-source password management service that stores sensitive information such as website credentials in an encrypted vault.",
   "image": "bitwardenrs/server:latest",
   "port": 80,
   "data_dirs": [
@@ -10,5 +10,21 @@
     "DOMAIN": "https://bitwarden.{{ portal.domain }}/",
     "ADMIN_TOKEN": "unused",
     "DISABLE_ADMIN_TOKEN": "true"
+  },
+  "paths": {
+    "": {
+      "access": "private"
+    }
+  },
+  "store_info": {
+    "description_short": "Unofficial Bitwarden compatible server",
+    "description_long": [
+      "Bitwarden is a free and open-source password management service that stores sensitive information such as website credentials in an encrypted vault.",
+      "This is a Bitwarden server API implementation written in Rust compatible with upstream Bitwarden clients, perfect for self-hosted deployment where running the official resource-heavy service might not be ideal."
+    ],
+    "hint": [
+      "At first use, you will have to create an account. This is not for security (Portal itself provides that) but because of insufficient integration.",
+      "Multi-user features are not functional yet, only you can use the app."
+    ]
   }
 }
