--- a/apps/element/app.json
+++ b/apps/element/app.json
@@ -1,7 +1,16 @@
 {
+  "v": "2.0",
   "name": "element",
-  "description": "Element (formerly known as Vector and Riot) is a Matrix web client built using the Matrix React SDK. Hint: this app has not been adapted to the Portal yet so you still need to create an account. After adaptation this will no longer be the case.",
   "image": "vectorim/element-web",
   "port": 80,
-  "data_dirs": []
+  "paths": {
+    "": {
+      "access": "private"
+    }
+  },
+  "store_info": {
+    "description_short": "Secure and independent communication, connected via Matrix",
+    "description_long": "Element (formerly known as Vector and Riot) is a Matrix web client built using the Matrix React SDK.",
+    "hint": "Since Matrix is a federated service, you will have to register or login at a matrix server on first use."
+  }
 }
