--- a/apps/ghost/app.json
+++ b/apps/ghost/app.json
@@ -1,6 +1,6 @@
 {
+  "v": "2.0",
   "name": "ghost",
-  "description": "A free and open source blogging platform, designed to simplify the process of online publishing for individual bloggers as well as online publications. Hint: this app has not been adapted to the Portal yet so you still need to create an account. After adaptation this will no longer be the case.",
   "image": "ghost:alpine",
   "port": 2368,
   "data_dirs": [
@@ -9,8 +9,31 @@
   "env_vars": {
     "url": "https://ghost.{{ portal.domain }}/"
   },
-  "authentication": {
-    "default_access": "public",
-    "private_paths": ["/ghost/"]
+  "paths": {
+    "": {
+      "access": "public",
+      "headers": {
+        "X-Ptl-Client-Type": "public"
+      }
+    },
+    "/ghost/": {
+      "access": "private",
+      "headers": {
+        "X-Ptl-Client-Type": "terminal",
+        "X-Ptl-Client-Id": "{{ client_id }}",
+        "X-Ptl-Client-Name": "{{ client_name }}"
+      }
+    }
+  },
+  "store_info": {
+    "description_short": "A free and open source blogging platform.",
+    "description_long": [
+      "Create your own platform on the web. Ghost is a powerful app for new-media creators to publish, share, and grow a business around their content. It comes with modern tools to build a website, publish content, send newsletters & offer paid subscriptions to members.",
+      "Don't settle for another basic profile that looks just like everyone else. Make it yours."
+    ],
+    "hint": [
+      "At first use, you will have to create an account and setup the site. The easiest way to to this is to navigate to a post and add /edit to the URL.",
+      "Multi-user features are not functional yet, only you can use the app."
+    ]
   }
 }
