--- a/apps/grist/app.json
+++ b/apps/grist/app.json
@@ -1,7 +1,6 @@
 {
-  "v": "1.0",
+  "v": "2.0",
   "name": "grist",
-  "description": "Grist is a modern relational spreadsheet. It combines the flexibility of a spreadsheet with the robustness of a database to organize your data and make you more productive.",
   "image": "gristlabs/grist",
   "port": 8484,
   "data_dirs": [
@@ -21,5 +20,13 @@
         "X-Ptl-Foo": "bar"
       }
     }
+  },
+  "store_info": {
+    "description_short": "Combine the flexibility of a spreadsheet with the robustness of a database to organize your data, your way.",
+    "description_long": "Grist is a modern relational spreadsheet. It combines the flexibility of a spreadsheet with the robustness of a database to organize your data and make you more productive.",
+    "hint": [
+      "Multi-user features are not functional yet, only you can use the app.",
+      "Integration of this app has not been thoroughly tested, so there might be unforeseen problems."
+    ]
   }
 }
