--- a/apps/jupyter-notebook/app.json
+++ b/apps/jupyter-notebook/app.json
@@ -1,9 +1,18 @@
 {
+  "v": "2.0",
   "name": "jupyter-notebook",
-  "description": "Jupyter notebook server using python3.8. Numpy, scipy, pandas and matplotlib are installed.",
   "image": "atdlewis/jupyter-notebook-no-auth:latest",
   "port": 80,
   "data_dirs": [
     "/workspace"
-  ]
+  ],
+  "paths": {
+    "": {
+      "access": "private"
+    }
+  },
+  "store_info": {
+    "description_short": "Jupyter notebook server using python3.8. Numpy, scipy, pandas and matplotlib are installed.",
+    "is_featured": true
+  }
 }
