--- a/apps/openbudgeteer/app.json
+++ b/apps/openbudgeteer/app.json
@@ -1,6 +1,6 @@
 {
+  "v": "2.0",
   "name": "openbudgeteer",
-  "description": "OpenBudgeteer is a budgeting app based on the Bucket Budgeting Principle and inspired by YNAB and Buckets.",
   "image": "axelander/openbudgeteer:latest",
   "port": 80,
   "data_dirs": [
@@ -8,5 +8,15 @@
   ],
   "env_vars": {
     "Connection:Provider": "sqlite"
+  },
+  "paths": {
+    "": {
+      "access": "private"
+    }
+  },
+  "store_info": {
+    "description_short": "OpenBudgeteer is a budgeting app based on the Bucket Budgeting Principle",
+    "description_long": "OpenBudgeteer is a budgeting app based on the Bucket Budgeting Principle and inspired by YNAB and Buckets.",
+    "is_featured": true
   }
 }
