--- a/apps/ubuntu-web-shell/app.json
+++ b/apps/ubuntu-web-shell/app.json
@@ -1,9 +1,18 @@
 {
+  "v": "2.0",
   "name": "ubuntu-web-shell",
-  "description": "ttyd running bash on Ubuntu 20.04",
   "image": "atdlewis/ubuntu-ttyd:latest",
   "port": 80,
   "data_dirs": [
     "/user_data"
-  ]
+  ],
+  "paths": {
+    "": {
+      "access": "private"
+    }
+  },
+  "store_info": {
+    "description_short": "ttyd running bash on Ubuntu 20.04",
+    "hint": null
+  }
 }
