--- a/apps/bitwarden/app.json
+++ b/apps/bitwarden/app.json
@@ -14,6 +14,9 @@
   "paths": {
     "": {
       "access": "private"
+    },
+    "/#/send/": {
+      "access": "public"
     }
   },
   "store_info": {
