--- a/apps/fider/app.json
+++ b/apps/fider/app.json
@@ -15,5 +15,11 @@
       "access": "public",
       "headers": null
     }
+  },
+  "store_info": {
+    "description_short": "Fider",
+    "description_long": [
+      "Fider"
+    ]
   }
 }
