add static resources to public path

--- a/apps/ohmyform/app.json
+++ b/apps/ohmyform/app.json
@@ -20,6 +20,9 @@
     },
     "/form/": {
       "access": "public"
+    },
+    "/_next/static/": {
+      "access": "public"
     }
   },
   "store_info": {
