--- a/apps/searx/app.json
+++ b/apps/searx/app.json
@@ -14,6 +14,10 @@
       "access": "private"
     }
   },
+  "lifecycle": {
+    "always_on": false,
+    "idle_time_for_shutdown": 60
+  },
   "store_info": {
     "description_short": "Privacy-respecting metasearch engine",
     "description_long": [
