--- a/apps/navidrome/app.json
+++ b/apps/navidrome/app.json
@@ -11,7 +11,8 @@
     }
   ],
   "env_vars": {
-    "ND_REVERSEPROXYUSERHEADER": "X-Ptl-User"
+    "ND_REVERSEPROXYUSERHEADER": "X-Ptl-User",
+    "ND_REVERSEPROXYWHITELIST": "0.0.0.0/0"
   },
   "paths": {
     "": {
