--- a/apps/etherpad/app.json
+++ b/apps/etherpad/app.json
@@ -1,7 +1,7 @@
 {
   "v": "2.0",
   "name": "etherpad",
-  "image": "portalapps.azurecr.io/ptl-apps/etherpad-lite",
+  "image": "portalapps.azurecr.io/ptl-apps/etherpad-lite:master",
   "port": 9001,
   "data_dirs": [
     "/var"
