make etherpad list view private

--- a/apps/etherpad/app.json
+++ b/apps/etherpad/app.json
@@ -23,7 +23,7 @@
       "access": "public",
       "headers": null
     },
-    "/admin/": {
+    "/list": {
       "access": "private",
       "headers": null
     }
