--- a/apps/jelu/app.json
+++ b/apps/jelu/app.json
@@ -1,7 +1,7 @@
 {
   "v": "3.1",
   "name": "jelu",
-  "image": "wabayang/jelu:0.0.27-proxy2",
+  "image": "wabayang/jelu",
   "port": 11111,
   "data_dirs": [
     "/config",
