--- a/apps/jelu/app.json
+++ b/apps/jelu/app.json
@@ -13,7 +13,8 @@
     "JELU_AUTH_LDAP_ENABLED": "false",
     "JELU_AUTH_PROXY_ENABLED": "true",
     "JELU_AUTH_PROXY_ADMINNAME": "admin",
-    "JELU_AUTH_PROXY_HEADER": "X-Ptl-User"
+    "JELU_AUTH_PROXY_HEADER": "X-Ptl-User",
+    "JAVA_TOOL_OPTIONS": "-Xmx128m"
   },
   "paths": {
     "": {
