--- a/apps/linkding/app.json
+++ b/apps/linkding/app.json
@@ -9,14 +9,14 @@
   "env_vars": {
     "LD_ENABLE_AUTH_PROXY": "True",
     "LD_SUPERUSER_NAME": "admin",
-    "LD_AUTH_PROXY_USERNAME_HEADER": "HTTP_REMOTE_USER",
+    "LD_AUTH_PROXY_USERNAME_HEADER": "HTTP_X_PTL_USER",
     "DEBUG": "true"
   },
   "paths": {
     "": {
       "access": "private",
       "headers": {
-        "HTTP_REMOTE_USER": "admin"
+        "X-Ptl-User": "admin"
       }
     }
   },
