--- a/apps/grist/app.json
+++ b/apps/grist/app.json
@@ -8,16 +8,16 @@
   ],
   "env_vars": {
     "APP_HOME_URL": "https://grist.{{ portal.domain }}",
-    "GRIST_SINGLE_ORG": "docs"
+    "GRIST_FORWARD_AUTH_HEADER": "X-Ptl-Authenticated-User",
+    "GRIST_DEFAULT_EMAIL": "admin@{{ portal.domain }}",
+    "GRIST_SINGLE_ORG": "grist",
+    "GRIST_PAGE_TITLE_SUFFIX": " - Grist@Portal"
   },
   "paths": {
     "": {
       "access": "private",
       "headers": {
-        "X-Ptl-Client-Id": "{{ client_id }}",
-        "X-Ptl-Client-Name": "{{ client_name }}",
-        "X-Ptl-Client-Type": "terminal",
-        "X-Ptl-Foo": "bar"
+        "X-Ptl-Authenticated-User": "admin@{{ portal.domain }}"
       }
     }
   },
