--- a/apps/navidrome/app.json
+++ b/apps/navidrome/app.json
@@ -31,6 +31,7 @@
     "description_short": "Navidrome is a self-hosted, open source music server and streamer.",
     "description_long": [
       "Navidrome is a self-hosted, open source music server and streamer. It gives you freedom to listen to your music collection from any browser or mobile device."
-    ]
+    ],
+    "is_featured": true
   }
 }
