--- a/apps/owncloud/app.json
+++ b/apps/owncloud/app.json
@@ -9,7 +9,7 @@
   "services": ["postgres"],
   "env_vars": {
     "OWNCLOUD_DOMAIN": "owncloud.{{ portal.domain }}",
-    "OWNCLOUD_TRUSTED_DOMAINS": "owncloud.{{ portal.domain }}",
+    "OWNCLOUD_TRUSTED_DOMAINS": "owncloud.{{ portal.domain }},localhost,onlyoffice,traefik",
     "DOCUMENT_SERVER_URL": "https://onlyoffice.{{ portal.domain }}",
     "DOCUMENT_SERVER_INTERNAL_URL": "http://onlyoffice",
     "STORAGE_URL": "http://owncloud:8080",
