--- a/apps/snapdrop/app.json
+++ b/apps/snapdrop/app.json
@@ -17,6 +17,6 @@
     "description_long": [
       "Local file sharing in your browser. Inspired by Apple's Airdrop."
     ],
-    "is_featured": true
+    "is_featured": false
   }
 }
