--- a/apps/changedetection/app.json
+++ b/apps/changedetection/app.json
@@ -21,6 +21,6 @@
       "Live your data-life pro-actively instead of re-actively.",
       "Free, Open-source web page monitoring, notification and change detection."
     ],
-    "is_featured": true
+    "is_featured": false
   }
 }
