--- a/apps/node-red/app.json
+++ b/apps/node-red/app.json
@@ -25,6 +25,6 @@
       "The 'http in' node can only be called from a paired terminal",
       "Protocols except http are not supported yet"
     ],
-    "is_featured": true
+    "is_featured": false
   }
 }
