--- a/apps/photoprism/app.json
+++ b/apps/photoprism/app.json
@@ -34,6 +34,6 @@
     "hint": [
       "AI-based image recognition is disabled due to performance constraints"
     ],
-    "is_featured": true
+    "is_featured": false
   }
 }
