--- a/apps/website-shot/app.json
+++ b/apps/website-shot/app.json
@@ -13,6 +13,6 @@
     "description_long": [
       "Generate a full web-page screenshot with our service, that provides rich interface to make any kind of web screenshots online for free with no limits. The simplest way to take a full page screenshot, we support a long pages up to 20000 pixels"
     ],
-    "is_featured": true
+    "is_featured": false
   }
 }
