--- a/apps/home-assistant/app.json
+++ b/apps/home-assistant/app.json
@@ -1,7 +1,7 @@
 {
   "v": "4.0",
   "name": "home-assistant",
-  "image": "ghcr.io/home-assistant/home-assistant:stable",
+  "image": "portalapps.azurecr.io/ptl-apps/homeassistant:main",
   "entrypoints": [
     {
       "container_port": 8123,
