--- a/inactive/.template/app.json
+++ b/inactive/.template/app.json
@@ -1,19 +1,27 @@
 {
-  "v": "3.1",
+  "v": "4.0",
   "name": "myapp",
   "image": "myapp:1.2.3",
-  "port": 8080,
+  "entrypoints": [
+    {
+      "container_port": 80,
+      "entrypoint_port": "http"
+    }
+  ],
   "data_dirs": [
     "/user_data",
     {
       "path": "/more_data",
       "uid": 1000,
       "gid": 1000
+    },
+    {
+      "path": "/media_data",
+      "shared_dir": "media"
     }
   ],
   "services": ["postgres"],
   "env_vars": {
-    "BASE_URL": "https://myapp.{{ portal.domain }}/",
     "DATABASE_URL": "{{ postgres.connection_string }}",
     "DEBUG": "true"
   },
@@ -21,23 +29,32 @@
     "": {
       "access": "private",
       "headers": {
-        "X-Ptl-Client-Id": "{{ client_id }}",
-        "X-Ptl-Client-Name": "{{ client_name }}",
-        "X-Ptl-Client-Type": "{{ client_type }}",
+        "X-Ptl-Client-Id": "{{ auth.client_id }}",
+        "X-Ptl-Client-Name": "{{ auth.client_name }}",
+        "X-Ptl-Client-Type": "{{ auth.client_type }}",
+        "X-Ptl-Foo": "bar"
+      }
+    },
+    "/peer/": {
+      "access": "peer",
+      "headers": {
+        "X-Ptl-Client-Id": "{{ auth.client_id }}",
+        "X-Ptl-Client-Name": "{{ auth.client_name }}",
+        "X-Ptl-Client-Type": "{{ auth.client_type }}",
         "X-Ptl-Foo": "bar"
       }
     },
     "/public/": {
       "access": "public",
       "headers": {
-        "X-Ptl-Client-Type": "{{ client_type }}",
+        "X-Ptl-Client-Type": "{{ auth.client_type }}",
         "X-Ptl-Foo": "baz"
       }
     }
   },
   "lifecycle": {
     "always_on": false,
-    "idle_time_for_shutdown": 60
+    "idle_time_for_shutdown": 120
   },
   "store_info": {
     "description_short": "A great app",
