--- a/apps/kanboard/app.json
+++ b/apps/kanboard/app.json
@@ -26,13 +26,22 @@
       }
     },
     "/public/": {
-      "access": "public"
+      "access": "public",
+      "headers": {
+        "X-Ptl-Proxy-Username": "guest"
+      }
     },
     "/feed/": {
-      "access": "public"
+      "access": "public",
+      "headers": {
+        "X-Ptl-Proxy-Username": "guest"
+      }
     },
     "/ical/": {
-      "access": "public"
+      "access": "public",
+      "headers": {
+        "X-Ptl-Proxy-Username": "guest"
+      }
     }
   },
   "lifecycle": {
