make assets public

--- a/apps/kanboard/app.json
+++ b/apps/kanboard/app.json
@@ -42,6 +42,9 @@
       "headers": {
         "X-Ptl-Proxy-Username": "guest"
       }
+    },
+    "/assets/": {
+      "access": "public"
     }
   },
   "lifecycle": {
